--- a/conesieee-app/package.json
+++ b/conesieee-app/package.json
@@ -13,6 +13,8 @@
     "license": "MIT",
     "dependencies": {
         "concurrently": "^6.2.1",
-        "express": "^4.17.1"
+        "dotenv": "^10.0.0",
+        "express": "^4.17.1",
+        "mariadb": "^2.5.4"
     }
 }
