--- a/conesieee-app/package.json
+++ b/conesieee-app/package.json
@@ -5,16 +5,18 @@
     "main": "server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "server": "node server.js",
+        "server": "nodemon server.js",
         "client": "npm start --prefix client",
         "dev": "concurrently \"npm run server\" \"npm run client\""
     },
     "author": "",
     "license": "MIT",
     "dependencies": {
+        "body-parser": "^1.19.0",
         "concurrently": "^6.2.1",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
-        "mariadb": "^2.5.4"
+        "mariadb": "^2.5.4",
+        "nodemon": "^2.0.12"
     }
 }
