--- a/conesieee-app/client/package.json
+++ b/conesieee-app/client/package.json
@@ -1,7 +1,7 @@
 {
     "name": "client",
     "version": "0.1.0",
-    "private": true,
+    "homepage": ".",
     "dependencies": {
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^11.2.7",
@@ -20,7 +20,6 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
-    "proxy": "http://localhost:5000",
     "eslintConfig": {
         "extends": [
             "react-app",
