--- a/conesieee-app/package.json
+++ b/conesieee-app/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "body-parser": "^1.19.0",
         "concurrently": "^6.2.1",
+        "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "mariadb": "^2.5.4",
